Drop scala options
`fork` option in scala compiler has been deprecated in recent Gradle and should be removed.