@@ -57,11 +57,6 @@ dependencies {
   testCompile 'org.slf4j:slf4j-log4j12:1.7.21'
 }
 
-compileScala {
-  scalaCompileOptions.fork = true
-  scalaCompileOptions.forkOptions.jvmArgs = ['-XX:MaxPermSize=512m']
-}
-
 shadowJar {
   zip64 = true
 
